Fix bug: drawer header menus were not wide enough on small screens

--- a/www/css/main.css
+++ b/www/css/main.css
@@ -96,12 +96,12 @@ blockquote {
     position: fixed;
     top: 54px;
     transition: left 0.3s linear;
-    width: 50%;
+    width: 75%;
     z-index: 10;
   }
 
   #navbar-left {
-    left: -50%;
+    left: -75%;
   }
 
   #navbar-right {
@@ -114,7 +114,7 @@ blockquote {
   }
 
   #navbar-right.shown {
-    left: 50%;
+    left: 25%;
     transition: left 0.3s linear;
   }
 }
